samples/_failures_safe/1761689425_8935a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11235c28.c: In function ‘main’:
./samples/SAFE/__tmp_11235c28.c:135:18: error: expected ‘)’ at end of input
  135 |         if (scanf
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_11235c28.c:135:9: error: expected declaration or statement at end of input
  135 |         if (scanf
      |         ^~
./samples/SAFE/__tmp_11235c28.c:135:9: error: expected declaration or statement at end of input
